Adds new img fix code

--- a/capstone/VGG16_modded_CAPSTONE.ipynb
+++ b/capstone/VGG16_modded_CAPSTONE.ipynb
@@ -124,7 +124,28 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<img src=\"https://github.com/MPBDS2022/Data-Science/tree/main/capstone/all_data.png\" />"
+        "![alt text](https://github.com/MPBDS2022/Data-Science/tree/main/capstone/all_data.png)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "![alt text](MPBDS2022/Data-Science/tree/main/capstone/all_data.png)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "![alt text](Data-Science/tree/main/capstone/all_data.png)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "![alt text](all_data.png)"
       ]
     },
     {
