Cleaned up modded model notebooks

--- a/capstone/VGG16_modded_CAPSTONE.ipynb
+++ b/capstone/VGG16_modded_CAPSTONE.ipynb
@@ -117,35 +117,16 @@
         "\n",
         "- VGG16 expects an input shape of (224, 224, 3) while the FER 2013 dataset is 48 x 48. The data loader code resizes the FER 2013 images to 224 x 224\n",
         "\n",
-        "- "
+        "- Part 1 - The frozen model has the entire set of feature-extraction layers loaded in before my custom fully connected classification layers. This pretrained model (with parameters trained on 'imagenet') is then trained on the FER 2013 dataset. This will provide training only to my custom fully connected classification layers.\n",
+        "\n",
+        "- Part 2 - The UNfrozen model also has the entire set of feature-extraction layers loaded in before my custom fully connected classification layers. During training, ALL layers (except for the batch normalization layers) take on new parameters."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "![alt text](https://github.com/MPBDS2022/Data-Science/tree/main/capstone/all_data.png)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "![alt text](MPBDS2022/Data-Science/tree/main/capstone/all_data.png)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "![alt text](Data-Science/tree/main/capstone/all_data.png)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "![alt text](all_data.png)"
+        "![Table listing all the new data](all_data.png)"
       ]
     },
     {
