Harmonizes slight edits across modded model notebooks

--- a/capstone/EFFICIENTNET_modded_CAPSTONE.ipynb
+++ b/capstone/EFFICIENTNET_modded_CAPSTONE.ipynb
@@ -257,9 +257,9 @@
       },
       "outputs": [],
       "source": [
-        "# Path of the data file from this Github repository\n",
+        "# Path of the data file from the your drive location\n",
         "\n",
-        "path = 'Facial_emotion_images.zip'\n",
+        "path = '/YOUR-PATH/Facial_emotion_images.zip'\n",
         "\n",
         "# Data is provided as a zip file. The following extracts these files\n",
         "\n",
@@ -344,16 +344,18 @@
         }
       ],
       "source": [
+        "# 'include_top = False' is set this way to preserve the stability provided by unchanging parameters in the Batch Normalization' layers during the UNFROZEN section in Part 2, below.\n",
+        "\n",
         "EfficientNet = ap.EfficientNetB2(include_top = False, weights = \"imagenet\", input_shape = (260, 260, 3))"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Mf49wqsEtf8b"
+        "id": "J7NKTPgdEsgt"
       },
       "source": [
-        "# **Base dataloader**"
+        "## **Data Loader for data augmentation and preparation for use in the Transfer Learning Architectures**"
       ]
     },
     {
@@ -379,6 +381,11 @@
       ],
       "source": [
         "batch_size  = 32\n",
+        "\n",
+        "# EfficientNet B2 expects an input_shape of 260, 260, 3\n",
+        "# If the model is set to False re: trainable then it can handle other shapes. If it is set to True then it MUST be set to 224, 224, 3\n",
+        "# https://keras.io/api/applications/efficientnet/#efficientnetb2-function\n",
+        "\n",
         "img_size = 260\n",
         "\n",
         "datagen_train = ImageDataGenerator(horizontal_flip = True,\n",
@@ -429,9 +436,13 @@
       "source": [
         "------------\n",
         "\n",
-        "<br>\n",
         "\n",
         "## **Part 1: Frozen EfficientNet B2 model**\n",
+        "\n",
+        "-------------\n",
+        "------------\n",
+        "\n",
+        "<br>\n",
         "\n",
         "- The **feature extraction (EfficientNet B2)** portion is **FROZEN** - hyperparameters are as provided from the TensorFlow Keras environment.\n",
         "\n",
@@ -477,7 +488,7 @@
         "\n",
         "\n",
         "# Initializing the model\n",
-        "Efficientnetmodel = Model(EfficientNet.input, pred)"
+        "frozen_Efficientnetmodel = Model(EfficientNet.input, pred)"
       ]
     },
     {
@@ -499,7 +510,7 @@
       "source": [
         "img_file = './Efficientnetmodel_base.png'\n",
         "\n",
-        "tf.keras.utils.plot_model(Efficientnetmodel, to_file=img_file, show_shapes=True, show_layer_names=True)"
+        "tf.keras.utils.plot_model(frozen_Efficientnetmodel, to_file=img_file, show_shapes=True, show_layer_names=True)"
       ]
     },
     {
@@ -622,7 +633,7 @@
         }
       ],
       "source": [
-        "# Fitting the FROZEN model using train_set as the training data and validation_set as the validation data, for 20 epochs.\n",
+        "# Fitting the FROZEN EfficientNet B2 model using train_set as the training data and validation_set as the validation data, for 20 epochs.\n",
         "\n",
         "history_efficientmodel_frozen = frozen_Efficientnetmodel.fit(train_set,\n",
         "                                validation_data = validation_set,\n",
