--- a/capstone/VGG16_modded_CAPSTONE.ipynb
+++ b/capstone/VGG16_modded_CAPSTONE.ipynb
@@ -109,7 +109,21 @@
         "\n",
         "<br>\n",
         "\n",
-        "------  \n",
+        "------  "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "![Table listing all the new data](all_data.png)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "-----------\n",
         "\n",
         "<br>\n",
         "\n",
@@ -120,13 +134,6 @@
         "- Part 1 - The frozen model has the entire set of feature-extraction layers loaded in before my custom fully connected classification layers. This pretrained model (with parameters trained on 'imagenet') is then trained on the FER 2013 dataset. This will provide training only to my custom fully connected classification layers.\n",
         "\n",
         "- Part 2 - The UNfrozen model also has the entire set of feature-extraction layers loaded in before my custom fully connected classification layers. During training, ALL layers (except for the batch normalization layers) take on new parameters."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "![Table listing all the new data](all_data.png)"
       ]
     },
     {
@@ -246,9 +253,9 @@
       },
       "outputs": [],
       "source": [
-        "# Path of the data file from the Google drive\n",
+        "# Path of the data file from the your drive location\n",
         "\n",
-        "path = '/content/drive/MyDrive/Data_Science_Class/CAPSTONE_Project/CAP_proj_facial_emot_det/First-draft-w-GL-notebooks/Facial_emotion_images.zip'\n",
+        "path = '/YOUR-PATH/Facial_emotion_images.zip'\n",
         "\n",
         "# Data is provided as a zip file. The following extracts these files\n",
         "\n",
@@ -375,16 +382,7 @@
         "id": "J7NKTPgdEsgt"
       },
       "source": [
-        "## **Data Loaders for data augmentation and preparation for use in the Transfer Learning Architectures**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "u5WErLAH27jx"
-      },
-      "source": [
-        "# **Base dataloader**"
+        "## **Data Loader for data augmentation and preparation for use in the Transfer Learning Architectures**"
       ]
     },
     {
@@ -465,7 +463,7 @@
       "source": [
         "-------\n",
         "\n",
-        "# **Part 1: Frozen VGG16**\n",
+        "# **Part 1: Frozen VGG16 model**\n",
         "\n",
         "--------------\n",
         "--------------\n",
@@ -538,7 +536,7 @@
       "outputs": [],
       "source": [
         "\n",
-        "checkpoint = ModelCheckpoint(\"./vggmodel_frozen.h5\", monitor = 'val_loss', verbose = 1, save_best_only = True, mode = 'max')\n",
+        "frozen_checkpoint = ModelCheckpoint(\"./vggmodel_frozen.h5\", monitor = 'val_loss', verbose = 1, save_best_only = True, mode = 'max')\n",
         "\n",
         "early_stopping = EarlyStopping(monitor = 'val_loss',\n",
         "                          min_delta = 0,\n",
@@ -553,7 +551,7 @@
         "                              verbose = 1,\n",
         "                              min_delta = 0.0001)\n",
         "\n",
-        "callbacks_list = [early_stopping, checkpoint, reduce_learningrate]\n",
+        "callbacks_list = [early_stopping, frozen_checkpoint, reduce_learningrate]\n",
         "\n",
         "epochs = 20"
       ]
