--- a/capstone/MPB_capstone_code.ipynb
+++ b/capstone/MPB_capstone_code.ipynb
@@ -1,13 +1,18 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "hWQC8iCE2_-o"
    },
    "source": [
     "# **Capstone Project**\n",
-    "-------\n",
+    "\n",
+    "---\n",
+    "<center>This and other projects can be found at my Data Science Project Portfolio site <a href=\"https://www.monicaboyce.com\">MonicaBoyce.com</a></center>\n",
+    "\n",
+    "---\n",
     "\n",
     "## **Deep Learning Methods for Facial Emotion Recognition**\n",
     "\n",
@@ -18,12 +23,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "MPA8RlXC7kU3"
    },
    "source": [
-    "# **Executive Summary**\n",
+    "## **Executive Summary**\n",
     "### This project aims to construct a best-fit Convolutional Neural Network (CNN) model that accurately performs **multi-class classification for facial emotion recognition**. Specifically, the model must accurately **detect four specific emotions** in images of people, including: ‘happy’, ‘sad’, ‘neutral’, and ‘surprise’.  \n",
     "\n",
     "### A series of CNN models were designed, optimized and evaluated. Transfer learning strategies were also employed, utilizing the pre-trained feature-extraction layers of well tested high performance CNNs, namely,  VGG16, ResNet V1, and EfficientNet. \n",
@@ -38,11 +44,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "HDM89XHyCxrA"
    },
    "source": [
+    "\n",
+    "----\n",
+    "\n",
+    "## **If this notebook is to run on Google Colab - Mount the Drive**\n",
+    "\n",
+    "---\n",
+    "\n",
     "## **Mounting the Drive**\n",
     "\n",
     "**NOTE:** It is recommended that you use Google Colab with the GPU option selected to open and run the code in this notebook. "
@@ -58,15 +72,7 @@
     "id": "JQi_degJC3dm",
     "outputId": "d55b006d-da8a-49ec-8579-3f742374a0f9"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mounted at /content/drive\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Mounting the drive\n",
     "from google.colab import drive\n",
@@ -132,12 +138,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "nCqJk2XpCnJi"
    },
    "source": [
-    "### **Load the data**\n",
+    "# **Load the data**\n",
     "FER 2013: Classify facial expressions from 35,685 examples of 48x48 pixel grayscale images of faces. Images are categorized based on the emotion shown in the facial expressions (happiness, neutral, sadness, anger, surprise, disgust, fear).\n",
     "\n",
     "**This projects uses a subset of this dataset wheree only the following emotions were used:\n",
@@ -157,7 +164,7 @@
    "source": [
     "# Path of the data file from the Google drive\n",
     "\n",
-    "path = '/content/drive/MyDrive/YOUR-PATH/Facial_emotion_images.zip'\n",
+    "path = 'https://github.com/MPBDS2022/Data-Science/blob/main/capstone/Facial_emotion_images.zip'\n",
     "\n",
     "# Data is provided as a zip file. The following extracts these files\n",
     "\n",
@@ -178,12 +185,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "SjKlBaZDpWoV"
    },
    "source": [
-    "## **Building a Complex Neural Network Architecture**"
+    "# **Building a Complex Neural Network Architecture**"
    ]
   },
   {
@@ -267,12 +275,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Ft5U6f1Wie2R"
    },
    "source": [
-    "# **Final model architecture - RGB**\n",
+    "## **Final model architecture - RGB**\n",
     "\n",
     "- There are 5 Convolutional Blocks\n",
     "- **FIRST Convolutional Block**\n",
@@ -453,12 +462,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "fyc0B--hwTHS"
    },
    "source": [
-    "### **Compiling and Training the Final Model**"
+    "## **Compiling and Training the Final Model**"
    ]
   },
   {
@@ -596,12 +606,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "6kM421jx9Wv3"
    },
    "source": [
-    "### **Evaluating the Final Model on the test set**"
+    "## **Evaluating the Final Model on the test set**"
    ]
   },
   {
@@ -734,12 +745,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "GNWc6agwxJ_z"
    },
    "source": [
-    "### **Plotting the Confusion Matrix for the chosen final model**"
+    "## **Plotting the Confusion Matrix for the chosen final model**"
    ]
   },
   {
